--- a/doc/4.Netty实现网络通信.md
+++ b/doc/4.Netty实现网络通信.md
@@ -1,3 +1,7 @@
 1. netty协议制定——ByteBuf编解码
 2. handle编写
 3. netty网络模型
+4. netty调试经验
+
+5. 为什么这么设计？
+DefaultServiceRegistry-》serviceMap、registryService是static
