[v3.0] 使用CompletableFuture缓存client请求的结果

--- a/doc/5.[v3.0]ZK Curator学习.md
+++ b/doc/5.[v3.0]ZK Curator学习.md
@@ -17,6 +17,8 @@ Note: CuratorCache requires ZooKeeper 3.6+.
 
 ## curator使用封装
 
+[参考博客 curatorapi使用](https://blog.coddox.com/archives/curatorapi%E4%BD%BF%E7%94%A8)
+
 ## curator5.0的cache使用变化
 
 > Caches
